<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>xyz.pyxismc</groupId>
        <artifactId>tournament</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>tournament-paper</artifactId>
    <packaging>jar</packaging>

    <name>Tournament Paper</name>
    <description>Match execution on a Paper server</description>

    <properties>
        <!-- paper-api 26.2 est compilé en bytecode Java 25 : ce module doit être
             compilé par le JDK 25 déclaré dans ~/.m2/toolchains.xml.
             Override de java.version : le maven-compiler-plugin du parent
             interpolera <release> avec la valeur de ce module. -->
        <java.version>25</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.pyxismc</groupId>
            <artifactId>tournament-common</artifactId>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Compile avec le JDK 25 (toolchain) requis par paper-api. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <toolchains>
                                <jdk>
                                    <version>[25,26)</version>
                                </jdk>
                            </toolchains>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Emballe tournament-common dans le jar du plugin. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <artifactSet>
                                <excludes>
                                    <!-- Fournis par Paper au runtime. -->
                                    <exclude>net.kyori:*</exclude>
                                    <exclude>org.jetbrains:annotations</exclude>
                                    <exclude>org.slf4j:slf4j-api</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
